<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".DonasiActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@android:color/white"
            app:title="@string/judul"
            android:background="@color/colorPrimaryDark">

        </androidx.appcompat.widget.Toolbar>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/namaanda"
        android:textColor="@color/colorblack"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/nama" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alamatemail"
        android:textColor="@color/colorblack"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/alamat"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jumlahdonasi"
        android:textColor="@color/colorblack"
        android:padding="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/jumlahdonasi"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/catatan"
        android:textColor="@color/colorblack"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:inputType="textMultiLine"
            android:layout_gravity="top|left"
            android:layout_marginLeft="15dp"
            android:padding="2sp"
            android:layout_marginRight="15dp"
            android:background="@drawable/multistyle"
            />


        <Button
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/tombol"
            android:background="@android:color/holo_orange_dark"
            android:textColor="@android:color/white"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />

</LinearLayout>
</ScrollView>